mengubah bg color header dan menambahkan button

--- a/index.html
+++ b/index.html
@@ -12,65 +12,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <!-- NAVBAR -->
-      <nav class="mt-4">
-        <div class="container">
-          <div class="d-flex justify-content-between">
-            <a href="#">
-              <img width="48" src="assets/images/photo-profil.png" alt="photo-profil" />
-            </a>
-            <ul class="d-flex">
-              <li class="pe-4">
-                <a href="https://dribbble.com/fasfashan" target="_blank">
-                  <img src="assets/icons/Dribbble.svg" alt="dribbble" />
-                </a>
-              </li>
-              <li class="pe-4">
-                <a href="https://Instagram.com/fasfashan" target="_blank">
-                  <img src="assets/icons/Instagram.svg" alt="Instagram" />
-                </a>
-              </li>
-              <li>
-                <a href="https://Twitter.com/fasfashan" target="_blank">
-                  <img src="assets/icons/Twitter.svg" alt="Twitter" />
-                </a>
-              </li>
-            </ul>
+    <!-- NAVBAR -->
+    <nav class="mt-4">
+      <div class="container">
+        <div class="d-flex justify-content-between">
+          <a href="#">
+            <img width="48" src="assets/images/photo-profil.png" alt="photo-profil" />
+          </a>
+          <ul class="d-flex">
+            <li class="pe-4">
+              <a href="https://dribbble.com/fasfashan" target="_blank">
+                <img src="assets/icons/Dribbble.svg" alt="dribbble" />
+              </a>
+            </li>
+            <li class="pe-4">
+              <a href="https://Instagram.com/fasfashan" target="_blank">
+                <img src="assets/icons/Instagram.svg" alt="Instagram" />
+              </a>
+            </li>
+            <li>
+              <a href="https://Twitter.com/fasfashan" target="_blank">
+                <img src="assets/icons/Twitter.svg" alt="Twitter" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- NAVBAR -->
+    <!-- HERO SECTION -->
+    <section id="hero-section">
+      <div class="container">
+        <div class="row align-items-start d-flex justify-content-between content-hero">
+          <div class="col-xl-7 col-lg-7 col-md-7">
+            <h1>Niagahoster membantu saya selangkah lebih maju.</h1>
+            <p>Hi! Saya Muhamad Fasha Fadillah, kini bekerja sebagai UI designer dan juga Front-end developer. Saya akan bercerita bagaimana Niagahoster membantu saya dalam banyak hal.</p>
+            <a href="https://niagahoster.co.id" class="btn-hero">Visit Niagahoster ➜</a>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-4 description">
+            <img width="100%" class="mb-5" src="assets/images/niagahoster-logo-alt.png" alt="logo-niagahoster" />
+            <div class="d-flex justify-content-between">
+              <span>Ditulis oleh:</span>
+              <h5>Fasha Fadillah</h5>
+            </div>
+            <hr />
+            <div class="d-flex justify-content-between">
+              <span>Dibuat tanggal:</span>
+              <h5>22/02/2022</h5>
+            </div>
+            <hr />
+            <div class="d-flex justify-content-between">
+              <span>Estimasi membaca:</span>
+              <h5>1 menit</h5>
+            </div>
+            <hr />
           </div>
         </div>
-      </nav>
-      <!-- NAVBAR -->
-      <!-- HERO SECTION -->
-      <section id="hero-section">
-        <div class="container">
-          <div class="row align-items-start d-flex justify-content-between content-hero">
-            <div class="col-xl-7">
-              <h1>Niagahoster membantu saya selangkah lebih maju.</h1>
-              <p>Hi! Saya Muhamad Fasha Fadillah, kini bekerja sebagai UI designer dan juga Front-end developer. Saya akan bercerita bagaimana Niagahoster membantu saya dalam banyak hal.</p>
-            </div>
-            <div class="col-xl-4 description">
-              <img width="100%" class="mb-5" src="assets/images/niagahoster-logo-alt.png" alt="logo-niagahoster" />
-              <div class="d-flex justify-content-between">
-                <span>Ditulis oleh:</span>
-                <h5>Fasha Fadillah</h5>
-              </div>
-              <hr />
-              <div class="d-flex justify-content-between">
-                <span>Dibuat tanggal:</span>
-                <h5>22/02/2022</h5>
-              </div>
-              <hr />
-              <div class="d-flex justify-content-between">
-                <span>Estimasi membaca:</span>
-                <h5>1 menit</h5>
-              </div>
-              <hr />
-            </div>
-          </div>
-        </div>
-      </section>
-    </header>
+      </div>
+    </section>
+
     <!-- HERO SECTION -->
     <!-- MENGENAL NIAGAHOSTER -->
     <section id="mengenal-niagahoster">
