Commit terakhir. Bismillah menang lomba

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fasha Fadillah | UI Designer</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon-32x32.ico" />
+    <link rel="icon" sizes="16x16" type="image/x-icon" href="/assets/images/favicon-32x32.ico" />
+    <link rel="icon" sizes="32x32" type="image/x-icon" href="/assets/images/favicon-32x32.ico" />
+    <link rel="icon" sizes="96x96" type="image/x-icon" href="/assets/images/favicon-32x32.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -47,7 +49,7 @@
           <div class="col-xl-7 col-lg-7 col-md-7">
             <h1>Niagahoster membantu saya selangkah lebih maju.</h1>
             <p>Hi! Saya Muhamad Fasha Fadillah, kini bekerja sebagai UI designer dan juga Front-end developer. Saya akan bercerita bagaimana Niagahoster membantu saya dalam banyak hal.</p>
-            <a href="https://niagahoster.co.id" class="btn-hero">Visit Niagahoster ➜</a>
+            <a href="https://niagahoster.co.id" target="_blank" class="btn-hero">Visit Niagahoster ➜</a>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 description">
             <img width="100%" class="mb-5" src="assets/images/niagahoster-logo-alt.png" alt="logo-niagahoster" />
@@ -98,7 +100,7 @@
         </div>
         <div class="row img-section">
           <div class="col">
-            <img width="100%" src="assets/images/customer-service.png" alt="customer-service" />
+            <img class="img-mengenal" width="100%" src="assets/images/customer-service.png" alt="customer-service" />
           </div>
         </div>
       </div>
@@ -140,18 +142,16 @@
     </section>
     <!-- FITUR NIAGAHOSTER -->
     <!-- MENGENAL NIAGAHOSTER -->
-    <section id="mengenal-niagahoster">
+    <section id="freelancer-niagahoster">
       <div class="container">
-        <div class="row">
-          <div class="col"></div>
-        </div>
-
-        <div class="row">
+        <div class="row d-flex align-items-end">
           <div class="col-xl-6">
             <h5>Niagahoster temannya freelancer</h5>
-            <h2>Niagahoster temannya freelancer</h2>
-            <p>Saya memulai karir saya terlebih dahulu sebagai freelancer UI designer dan juga freelance web developer. Niagahoster menjadi pilihan saya tatkala ada clients saya yang ingin membuat website.</p>
-            <p>Selain pelayanan yang sangat baik dan cepat, saya sering mendapatkan promo potongan harga yang akhirnya memangkas modal saya sebagai freelancer.</p>
+            <h2>Niagahoster dan proyek freelance.</h2>
+            <p>
+              Saya memulai karir saya terlebih dahulu sebagai freelancer UI designer dan juga freelance web developer. Niagahoster menjadi pilihan saya tatkala ada clients saya yang ingin membuat website. Selain pelayanan yang sangat baik
+              dan cepat, saya sering mendapatkan promo potongan harga yang akhirnya memangkas modal saya sebagai freelancer.
+            </p>
             <p>
               Kamu seorang freelancer dan ingin memangkas modalmu? Kunjungi <span> <a href="https://www.niagahoster.co.id/" target="_blank"> link ini!</a></span>
             </p>
@@ -159,7 +159,6 @@
           <div class="col-xl-6">
             <img width="100%" src="assets/images/foto-fasha.png" alt="foto-fasha" />
           </div>
-          <div class="row img-section"></div>
         </div>
       </div>
     </section>
@@ -167,15 +166,23 @@
     <!-- FOOTER -->
     <footer>
       <div class="container">
-        <div class="row">
-          <div class="col-xl-8">
+        <div class="row d-flex align-items-start">
+          <div class="col-xl-6">
+            <h5>#JourneyWithNiagahoster</h5>
+            <h2>Niagahoster membantu saya dalam banyak hal.</h2>
             <p>
-              Di atas adalah beberapa cerita saya bersama Niagahoster dari awal mengenal Niagahoster sampai saat ini, dan saya tetap memilih Niagahoster jika ingin membeli domain atau hosting. Perihal alasannya apa, di atas sudah saya
-              jabarkan dengan jelas. <span>#journeywithniagahoster</span>
+              Di atas adalah beberapa rangkuman cerita saya bersama Niagahoster. Baik untuk kebutuhan pribadi, kebutuhan komersil hingga kebutuhan belajar saya. Dengan pelayanan dan produk yang ditawarkan, saya rasa Niagahoster layak
+              mendapatkan gelar "Web Hosting Terbaik" di Indonesia
             </p>
-            <p>Fasha Fadillah © 2022</p>
           </div>
-          <div class="col-xl-3"></div>
+          <div class="col-xl-6">
+            <img width="100%" src="assets/images/footer-img.png" alt="foto-fasha" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p class="mt-5 text-center">Fasha Fadillah © 2022</p>
+          </div>
         </div>
       </div>
     </footer>
