--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             </div>
             <hr />
             <div class="d-flex justify-content-between">
-              <span>Dibuat tanggal:</span>
-              <h5>22/02/2022</h5>
+              <span>Ditulis tanggal:</span>
+              <h5>20/06/2022</h5>
             </div>
             <hr />
             <div class="d-flex justify-content-between">
