menambahkan google search console meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- GOOGLE SEARCH CONSOLE -->
+    <meta name="google-site-verification" content="5fyfz6tnwaVkm4QPjC4tsBny3yeOTy_wtFWpjD1lyE0" />
+    <!-- GOOGLE SEARCH CONSOLE -->
     <title>Fasha Fadillah | UI Designer</title>
     <link rel="icon" sizes="16x16" type="image/x-icon" href="/assets/images/favicon-32x32.ico" />
     <link rel="icon" sizes="32x32" type="image/x-icon" href="/assets/images/favicon-32x32.ico" />
